# talk2db

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routers/: admin.py  chat.py  health.py  indexing.py  search.py  sql.py
backend/app/core/: auth.py  cache.py  config.py  graph.py  llm.py  logging.py  memory.py  vectorstores.py
backend/app/models/: schemas.py
backend/app/services/: agent.py  export.py  indexing.py  query_engines.py  retrieval.py
backend/app/services/ingestion/: base.py  confluence.py  database.py  onedrive.py  sharepoint.py  teams.py
backend/app/utils/: sse.py
frontend/: Dockerfile  app.py
