[tool.poetry]
name = "talk2db"
version = "0.1.0"
description = "Talk2DB project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = "0.30.0"
pydantic = ">=2.10,<2.12"
python-dotenv = "1.0.1"
requests = "2.32.3"
sqlalchemy = "2.0.31"
psycopg2-binary = "2.9.9"
pandas = "2.2.2"
openpyxl = "3.1.5"
plotly = "5.22.0"
matplotlib = "3.9.0"
neo4j = "5.22.0"

llama-index = "^0.13.2"                       
llama-index-llms-openai = ">=0.5,<0.6"        
llama-index-embeddings-openai = ">=0.5,<0.6"  
llama-index-vector-stores-postgres = ">=0.5,<0.7"  
llama-index-graph-stores-neo4j = ">=0.5,<0.6"      
